--- a/starter-web-javascript-example/src/main/resources/static/index.html
+++ b/starter-web-javascript-example/src/main/resources/static/index.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+    <!-- Your header stuff here -->
+    <title>Starter Web JavaScript Example</title>
+</head>
+
 <body>
 <!-- CoffeeNet header -->
 <header id="coffeenet-header"></header>
@@ -6,3 +12,4 @@
 
 <script src="/webjars/navigation-bar/bundle.min.js"></script>
 </body>
+</html>
