[web javascript] minor adaptions

--- a/starter-web-javascript-example/src/main/resources/static/index.html
+++ b/starter-web-javascript-example/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 <!-- CoffeeNet header -->
 <header id="coffeenet-header"></header>
 
-<span>this is my html</span>
+<span>You can place your stuff here</span>
 
 <script src="/webjars/navigation-bar/bundle.min.js"></script>
 </body>
