improve examples and test next release version 0.24.0-SNAPSHOT

--- a/starter-navigation-javascript-example/src/main/resources/static/index.html
+++ b/starter-navigation-javascript-example/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <!-- Your header stuff here -->
-    <title>Starter Web JavaScript Example</title>
+    <title>Starter Navigation JavaScript Example</title>
 </head>
 
 <body>
