Add coffeenet main in navigation javascript example

--- a/starter-navigation-javascript-example/src/main/resources/static/index.html
+++ b/starter-navigation-javascript-example/src/main/resources/static/index.html
@@ -8,7 +8,9 @@
 <!-- CoffeeNet header -->
 <header id="coffeenet-header"></header>
 
-<span>You can place your stuff here</span>
+<main class="coffeenet--main">
+    <span>You can place your stuff here</span>
+</main>
 
 <script src="/webjars/navigation-bar/bundle.min.js"></script>
 </body>
