Upgrade javascript example to latest version

--- a/starter-navigation-javascript-example/src/main/resources/static/index.html
+++ b/starter-navigation-javascript-example/src/main/resources/static/index.html
@@ -12,6 +12,6 @@
     <span>You can place your stuff here</span>
 </main>
 
-<script src="/webjars/navigation-bar/bundle.min.js"></script>
+<script type="text/javascript" src="/webjars/navigation-bar/bundle.min.js"></script>
 </body>
 </html>
